# hexlet-git

./: .gitignore  Makefile  README.md  input.txt  input_text.txt  output.txt  output_text.txt  pyproject.toml  reverse_text.sh
hexlet-hello-world/: .gitignore  README.md
hexlet_hello_world/: functions.py  module.py  pyproject.toml
hexlet_hello_world/besitzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hexlet_hello_world/src/brain_games.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hexlet_hello_world/src/hexlet/: functions.py
src/: capitalize.py
tests/: test_sample.py
