[project]
name = "besitzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.9"
]

[tool.uv.workspace]
members = [
    "python-project-49/.github/python-project-49/.github/workflows",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []
