[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-games"
version = "0.1.0"
description = "Hexlet Brain Games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["."]
